--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ before_install:
   - sudo apt-get update
   #rvm: 2.1.1
 
+services:
+  - mongodb
+
 addons:
   code_climate:
     repo_token: dbff2f8dc258f57e456b6c1980bef3159ae268fe03291656251e140e91d0e6d6
