--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,3 +1,31 @@
+production:
+  sessions:
+    default:
+      # The standard MongoDB connection URI allows for easy replica set connection setup.
+      # Use environment variables or a config file to keep your credentials safe.
+      uri: <%= ENV['MONGOHQ_URL'] %>
+      options:
+        # The default consistency is :eventual, which reads from secondaries when possible.
+        # Strong forces reads to primary. We recommend using strong consistency.
+        consistency: :strong
+        # max_retries specifies the number of times to attempt an operation before giving up.
+        max_retries: 15
+        # retry_interval specifies the number of seconds to wait before retrying a single operation.
+        retry_interval: 2
+        # The default timeout is 5, which is the time in seconds for an operation to time out.
+        # We recommend 15 because it allows for plenty of time in most operating environments.
+        # Mongoid doubles the configured value (known issue) so 15 results in a timeout of 30s.
+        # Note that if you have a long-running query (over 30 seconds), it will time out.
+        # See our example for long-running queries in the blog post referenced above.
+        timeout: 7.5
+        # Set this to ensure that your writes are a round-trip operation
+        # and are confirmed by the system.
+        safe: true
+        # refresh_interval specifies the number of seconds to cache server information.
+        # Lowering this number will help the driver recover more quickly from changes to replica set reconfiguration
+        refresh_interval: 10
+
+
 development:
   # Configure available database sessions. (required)
   sessions:
@@ -10,51 +38,7 @@ development:
       # of host:port pairs. (required)
       hosts:
         - localhost:27017
-      options:
-        # Change the default write concern. (default = { w: 1 })
-        # write:
-        # w: 1
 
-        # Change the default consistency model to primary, secondary.
-        # 'secondary' will send reads to secondaries, 'primary' sends everything
-        # to master. (default: primary)
-        # read: secondary_preferred
-
-        # How many times Moped should attempt to retry an operation after
-        # failure. (default: The number of nodes in the cluster)
-        # max_retries: 20
-
-        # The time in seconds that Moped should wait before retrying an
-        # operation on failure. (default: 0.25)
-        # retry_interval: 0.25
-  # Configure Mongoid specific options. (optional)
-  options:
-    # Includes the root model name in json serialization. (default: false)
-    # include_root_in_json: false
-
-    # Include the _type field in serializaion. (default: false)
-    # include_type_for_serialization: false
-
-    # Preload all models in development, needed when models use
-    # inheritance. (default: false)
-    # preload_models: false
-
-    # Protect id and type from mass assignment. (default: true)
-    # protect_sensitive_fields: true
-
-    # Raise an error when performing a #find and the document is not found.
-    # (default: true)
-    # raise_not_found_error: true
-
-    # Raise an error when defining a scope with the same name as an
-    # existing method. (default: false)
-    # scope_overwrite_exception: false
-
-    # Use Active Support's time zone in conversions. (default: true)
-    # use_activesupport_time_zone: true
-
-    # Ensure all times are UTC in the app side. (default: false)
-    # use_utc: false
 test:
   sessions:
     default:
