--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -7,7 +7,7 @@ production:
       options:
         # The default consistency is :eventual, which reads from secondaries when possible.
         # Strong forces reads to primary. We recommend using strong consistency.
-        consistency: :strong
+        # consistency: :strong
         # max_retries specifies the number of times to attempt an operation before giving up.
         max_retries: 15
         # retry_interval specifies the number of seconds to wait before retrying a single operation.
