--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -7,7 +7,7 @@ production:
       options:
         # The default consistency is :eventual, which reads from secondaries when possible.
         # Strong forces reads to primary. We recommend using strong consistency.
-        # consistency: :strong
+        consistency: :primary
         # max_retries specifies the number of times to attempt an operation before giving up.
         max_retries: 15
         # retry_interval specifies the number of seconds to wait before retrying a single operation.
@@ -18,9 +18,6 @@ production:
         # Note that if you have a long-running query (over 30 seconds), it will time out.
         # See our example for long-running queries in the blog post referenced above.
         timeout: 7.5
-        # Set this to ensure that your writes are a round-trip operation
-        # and are confirmed by the system.
-        safe: true
         # refresh_interval specifies the number of seconds to cache server information.
         # Lowering this number will help the driver recover more quickly from changes to replica set reconfiguration
         refresh_interval: 10
